// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`processDocCoverage > should succesfully get the right number of ts files 1`] = `
{
  "classes": {
    "coverage": 100,
    "issues": [],
    "nodesCount": 1,
  },
  "enums": {
    "coverage": 100,
    "issues": [],
    "nodesCount": 0,
  },
  "functions": {
    "coverage": 33.333333333333336,
    "issues": [
      {
        "file": "/home/alejandro/dev/code-pushup-cli/packages/plugin-doc-coverage/mocks/fixtures/angular/app.component.spec.ts",
        "line": 1,
        "name": "notRealisticFunction",
        "type": "functions",
      },
      {
        "file": "/home/alejandro/dev/code-pushup-cli/packages/plugin-doc-coverage/mocks/fixtures/angular/map-event.function.ts",
        "line": 1,
        "name": "mapEventToCustomEvent",
        "type": "functions",
      },
    ],
    "nodesCount": 3,
  },
  "interfaces": {
    "coverage": 100,
    "issues": [],
    "nodesCount": 0,
  },
  "methods": {
    "coverage": 50,
    "issues": [
      {
        "file": "/home/alejandro/dev/code-pushup-cli/packages/plugin-doc-coverage/mocks/fixtures/angular/app.component.ts",
        "line": 15,
        "name": "sendEvent",
        "type": "methods",
      },
    ],
    "nodesCount": 2,
  },
  "properties": {
    "coverage": 0,
    "issues": [
      {
        "file": "/home/alejandro/dev/code-pushup-cli/packages/plugin-doc-coverage/mocks/fixtures/angular/app.component.ts",
        "line": 5,
        "name": "title",
        "type": "properties",
      },
    ],
    "nodesCount": 1,
  },
  "types": {
    "coverage": 100,
    "issues": [],
    "nodesCount": 0,
  },
  "variables": {
    "coverage": 100,
    "issues": [],
    "nodesCount": 0,
  },
}
`;

exports[`processDocCoverage > should succesfully get the right number of ts files and not include spec files 1`] = `
{
  "classes": {
    "coverage": 100,
    "issues": [],
    "nodesCount": 1,
  },
  "enums": {
    "coverage": 100,
    "issues": [],
    "nodesCount": 0,
  },
  "functions": {
    "coverage": 50,
    "issues": [
      {
        "file": "/home/alejandro/dev/code-pushup-cli/packages/plugin-doc-coverage/mocks/fixtures/angular/map-event.function.ts",
        "line": 1,
        "name": "mapEventToCustomEvent",
        "type": "functions",
      },
    ],
    "nodesCount": 2,
  },
  "interfaces": {
    "coverage": 100,
    "issues": [],
    "nodesCount": 0,
  },
  "methods": {
    "coverage": 50,
    "issues": [
      {
        "file": "/home/alejandro/dev/code-pushup-cli/packages/plugin-doc-coverage/mocks/fixtures/angular/app.component.ts",
        "line": 15,
        "name": "sendEvent",
        "type": "methods",
      },
    ],
    "nodesCount": 2,
  },
  "properties": {
    "coverage": 0,
    "issues": [
      {
        "file": "/home/alejandro/dev/code-pushup-cli/packages/plugin-doc-coverage/mocks/fixtures/angular/app.component.ts",
        "line": 5,
        "name": "title",
        "type": "properties",
      },
    ],
    "nodesCount": 1,
  },
  "types": {
    "coverage": 100,
    "issues": [],
    "nodesCount": 0,
  },
  "variables": {
    "coverage": 100,
    "issues": [],
    "nodesCount": 0,
  },
}
`;
